@@ -132,7 +132,7 @@ mclapply <- function(X, FUN, ..., mc.preschedule = TRUE, mc.set.seed = TRUE,
         if (inherits(f, "masterProcess")) { # this is the child process
             on.exit(mcexit(1L, structure("fatal error in wrapper code", class="try-error")))
             if (isTRUE(mc.set.seed)) mc.set.stream()
-            if (isTRUE(mc.silent)) closeStdout()
+            if (isTRUE(mc.silent)) closeStdout(TRUE)
             sendMaster(try(lapply(X = S, FUN = FUN, ...), silent = TRUE))
             mcexit(0L)
         }
